# yew_frontend

./: Cargo.toml  index.html
src/: store.rs
src/api/: types.rs  user_api.rs
src/components/: alert.rs  mod.rs
src/pages/: home_page.rs  mod.rs  profile_page.rs  register_page.rs
